--- a/index.html
+++ b/index.html
@@ -18,7 +18,88 @@
     <img src="conectodos.png" class="img-fluid logo" alt="Responsive image">
 </div>
     
+<!-- Seccion Grafico 1 - Paraiso -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <!-- datos -->
+                <h6>Estatus Antena</h6>
+                <label class="form-control" id="mostrarPing">Estado</label>
+            </div>
+            <div class="col-4">
+                <h6>Hora Actual</h6>
+                <label class="form-control" id="datos">Ping</label>
+            </div>
+            <div class="col-4">
+                <h6>Número de Desconexiones Hoy</h6>
+                <label class="form-control" id="totalDesconexion">Desconexion</label>
+            </div>
 
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h6>Última Desconexión</h6>
+                <label class="form-control" id="ultDesconexion">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>Última Reconexión</h6>
+                <label class="form-control" id="reconexion">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>Detalles</h6>
+                <button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button>
+            </div>
+        </div>
+    </div>
+    <!-- Grafico 1 -->
+    <div class="container">
+        <canvas id="myChart" width="1400" height="300"></canvas>
+        <div>
+            <hr>
+</section>
+
+
+<!-- Seccion Grafico 2 - Comalcalco -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <!-- datos -->
+                <h6>Estatus Antena</h6>
+                <label class="form-control" id="mostrarPing2">Estado</label>
+            </div>
+            <div class="col-4">
+                <h6>Hora Actual</h6>
+                <label class="form-control" id="datos2">Ping</label>
+            </div>
+            <div class="col-4">
+                <h6>Número de Desconexiones Hoy</h6>
+                <label class="form-control" id="totalDesconexion2">Número de Desconexiones</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h6>Última desconexión</h6>
+                <label class="form-control" id="ultDesconexion2">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>Última Reconexión</h6>
+                <label class="form-control" id="reconexion2">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>Detalles</h6>
+                <button type="button" class="btn btn-warning" id="detalleTorre2">Acceder al Detalle de Desconexiones</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Grafico 2 -->
+    <div class="container">
+        <canvas id="myChart2" width="1400" height="300"></canvas>
+        <div>
+            <hr>
+</section>
 
 
 
