obteniendo datos para js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-4">
                 <h6>Hora Actual</h6>
-                <label class="form-control" id="datos">Ping</label>
+                <label class="form-control" id="datos">Hora Actual</label>
             </div>
             <div class="col-4">
                 <h6>Número de Desconexiones Hoy</h6>
@@ -71,7 +71,7 @@
             </div>
             <div class="col-4">
                 <h6>Hora Actual</h6>
-                <label class="form-control" id="datos2">Ping</label>
+                <label class="form-control" id="datos2">Hora actual</label>
             </div>
             <div class="col-4">
                 <h6>Número de Desconexiones Hoy</h6>
