--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Monitoreo Antenas</title>
 </head>
-<body>
+<body onLoad="setInterval('actualizaGrafico()', 1000);">
 
 <div class="text-center">
     <img src="conectodos.png" class="img-fluid logo" alt="Responsive image">
