--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
                 <label class="form-control" id="datos">Hora Actual</label>
             </div>
             <div class="col-4">
-                <h6>Número de Desconexiones Hoy</h6>
+            <h6>N&uacutemero de Desconexiones Hoy</h6>
                 <label class="form-control" id="totalDesconexion">Desconexion</label>
             </div>
 
         </div>
         <div class="row">
             <div class="col-4">
-                <h6>Última Desconexión</h6>
+                <h6>&Uacuteltima Desconexi&oacuten</h6>
                 <label class="form-control" id="ultDesconexion">Desconexion</label>
             </div>
             <div class="col-4">
-                <h6>Última Reconexión</h6>
+                <h6>&Uacuteltima Reconexi&oacuten</h6>
                 <label class="form-control" id="reconexion">Desconexion</label>
             </div>
             <div class="col-4">
@@ -74,17 +74,17 @@
                 <label class="form-control" id="datos2">Hora actual</label>
             </div>
             <div class="col-4">
-                <h6>Número de Desconexiones Hoy</h6>
+            <h6>N&uacutemero de Desconexiones Hoy</h6>
                 <label class="form-control" id="totalDesconexion2">Número de Desconexiones</label>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <h6>Última desconexión</h6>
+            <h6>&Uacuteltima desconexi&oacuten</h6>
                 <label class="form-control" id="ultDesconexion2">Desconexion</label>
             </div>
             <div class="col-4">
-                <h6>Última Reconexión</h6>
+            <h6>&Uacuteltima Reconexi&oacuten</h6>
                 <label class="form-control" id="reconexion2">Desconexion</label>
             </div>
             <div class="col-4">
