--- a/detalle.html
+++ b/detalle.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Detalle Antenas</title>
@@ -18,6 +19,52 @@
     <img src="conectodos.png" class="img-fluid logo" alt="Responsive image">
 </div>
 
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <h6>Fecha</h6>
+                <label class="form-control" id="mostrarPing">Fecha</label>
+            </div>
+            <div class="col-3">
+                <h6>N&uacutemero de Desconexiones</h6>
+                <label class="form-control" id="numDesconexion">Desconexion</label>
+            </div>
+            <div class="col-3">
+                <h6>Tiempo Fuera</h6>
+                <label class="form-control" id="totalDesconexion">Desconexion</label>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-9">
+                <hr>
+                <h5 class="detalle">Detalle Desconexiones</h5>
+                <hr>
+            </div>
+        </div>
+       
+        <div class="row">
+            <div class="col-3">
+                <h6>Desconexi&oacuten</h6>
+                <label class="form-control" id="ultDesconexion">Desconexion</label>
+            </div>
+            <div class="col-3">
+                <h6>Reconexi&oacuten</h6>
+                <label class="form-control" id="reconexion">Reconexion</label>
+            </div>
+            <div class="col-3">
+                <h6>Tiempo Fuera</h6>
+                <label class="form-control" id="tiempoFuera">Tiempo Fuera</label>
+            </div>
+        </div>
+    </div>
+    
+</section>
+
+<section>
+
+</section>
 
 
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
