--- a/detalle.html
+++ b/detalle.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-3">
                 <h6>Fecha</h6>
-                <label class="form-control" id="mostrarPing">Fecha</label>
+                <label class="form-control" id="fecha">Fecha</label>
             </div>
             <div class="col-3">
                 <h6>N&uacutemero de Desconexiones</h6>
@@ -44,10 +44,10 @@
             </div>
         </div>
        
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-3">
                 <h6>Desconexi&oacuten</h6>
-                <label class="form-control" id="ultDesconexion">Desconexion</label>
+                <label class="form-control" id="desconexion">Desconexion</label>
             </div>
             <div class="col-3">
                 <h6>Reconexi&oacuten</h6>
@@ -57,9 +57,25 @@
                 <h6>Tiempo Fuera</h6>
                 <label class="form-control" id="tiempoFuera">Tiempo Fuera</label>
             </div>
-        </div>
+        </div> -->
+<div class="col-9">
+<table id="tabla1">
+    <tr>
+        <th>Desconexion</th>
+        <th>Reconexion</th>
+        <th>Tiempo Fuera</th>
+    </tr>
+
+</table>
+
+<table id="tabla">
+
+
+</table>
+</div>
+
     </div>
-    
+
 </section>
 
 <section>
