--- a/detalle.html
+++ b/detalle.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-3">
                 <h6>Fecha</h6>
-                <label class="form-control" id="fecha">Fecha</label>
+                <label class="form-control" id="hoy">Fecha</label>
             </div>
             <div class="col-3">
                 <h6>N&uacutemero de Desconexiones</h6>
@@ -58,7 +58,7 @@
                 <label class="form-control" id="tiempoFuera">Tiempo Fuera</label>
             </div>
         </div> -->
-<div class="col-9">
+<div class="tablas col-9" >
 <table id="tabla1">
     <tr>
         <th>Desconexion</th>
