--- a/detalle.html
+++ b/detalle.html
@@ -44,37 +44,35 @@
             </div>
         </div>
        
-        <!-- <div class="row">
-            <div class="col-3">
-                <h6>Desconexi&oacuten</h6>
-                <label class="form-control" id="desconexion">Desconexion</label>
-            </div>
-            <div class="col-3">
-                <h6>Reconexi&oacuten</h6>
-                <label class="form-control" id="reconexion">Reconexion</label>
-            </div>
-            <div class="col-3">
-                <h6>Tiempo Fuera</h6>
-                <label class="form-control" id="tiempoFuera">Tiempo Fuera</label>
-            </div>
-        </div> -->
-<div class="tablas col-9" >
-<table id="tabla1">
-    <tr>
-        <th>Desconexion</th>
-        <th>Reconexion</th>
-        <th>Tiempo Fuera</th>
-    </tr>
 
-</table>
+    <div class="row">
+        <div class="tablas col-9" >
+            <table id="tabla1">
+                <tr>
+                    <th>Desconexion</th>
+                    <th>Reconexion</th>
+                    <th>Tiempo Fuera</th>
+                </tr>
 
-<table id="tabla">
-
-
-</table>
-</div>
-
+            </table>
+        </div>
     </div>
+    <div class="row">
+        <div class="col-3">
+            <table id="tabla">
+
+            </table>
+        </div>
+        <div class="col-3">
+            <table id="tabla2">
+
+
+            </table>
+        </div>
+    </div>
+
+
+</div>
 
 </section>
 
