--- a/detalle.html
+++ b/detalle.html
@@ -69,6 +69,12 @@
 
             </table>
         </div>
+        <div class="col-3">
+            <table id="tabla3">
+        
+        
+            </table>
+        </div>
     </div>
 
 
