ajuste para grafica de tiempo fuera y en linea

--- a/detalle.html
+++ b/detalle.html
@@ -31,10 +31,13 @@
                 <label class="form-control" id="numDesconexion">Desconexion</label>
             </div>
             <div class="col-3">
-                <h6>Tiempo Fuera</h6>
+                <h6>Tiempo Total Desconectado</h6>
                 <label class="form-control" id="totalDesconexion">Desconexion</label>
             </div>
-
+            <div class="col-3">
+                <h6>Hora de la Consulta</h6>
+                <label class="form-control" id="horaConsulta">Desconexion</label>
+            </div>
         </div>
         <div class="row">
             <div class="col-9">
@@ -49,9 +52,9 @@
         <div class="tablas col-9" >
             <table id="tabla1">
                 <tr>
-                    <th>Desconexion</th>
-                    <th>Reconexion</th>
-                    <th>Tiempo Fuera</th>
+                    <th>Hora Desconexion</th>
+                    <th>Hora Reconexion</th>
+                    <th>Tiempo Desconexion</th>
                 </tr>
 
             </table>
