--- a/detalle.html
+++ b/detalle.html
@@ -78,6 +78,9 @@
         
             </table>
         </div>
+        <div class="col-3">
+            <canvas id="oilChart" width="600" height="400"></canvas>
+        </div>
     </div>
 
 
