grafico de porcentajes

--- a/detalle.html
+++ b/detalle.html
@@ -59,6 +59,9 @@
 
             </table>
         </div>
+        <div class="col-3">
+            <h6>Tiempo en Linea (%)</h6>
+        </div>
     </div>
     <div class="row">
         <div class="col-3">
