--- a/detalle.html
+++ b/detalle.html
@@ -9,6 +9,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+        crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Detalle Antenas</title>
@@ -83,12 +85,21 @@
         </div>
         <div class="col-3">
             <canvas id="oilChart" width="600" height="400"></canvas>
+           <div class="efectividad">
+            <h6>Efectividad Antena</h6>
+           </div>
+           <div class="logoEfectividad">
+            <i class="fas fa-check-circle ok  fa-3x"></i>
+            <i class="fas fa-exclamation-circle gris advertencia fa-3x"></i>
+            <i class="fas fa-times-circle error gris fa-3x"></i>
+           </div>
+
         </div>
     </div>
 
 
 </div>
-
+<hr>
 </section>
 
 <section>
