automatizacion de logos

--- a/detalle.html
+++ b/detalle.html
@@ -89,9 +89,9 @@
             <h6>Efectividad Antena</h6>
            </div>
            <div class="logoEfectividad">
-            <i class="fas fa-check-circle ok  fa-3x"></i>
-            <i class="fas fa-exclamation-circle gris advertencia fa-3x"></i>
-            <i class="fas fa-times-circle error gris fa-3x"></i>
+            <i class="fas fa-check-circle ok gris fa-3x" id="ok"></i>
+            <i class="fas fa-exclamation-circle gris advertencia fa-3x" id="advertencia"></i>
+            <i class="fas fa-times-circle error gris fa-3x" id="error"></i>
            </div>
 
         </div>
