evitar sobreescritura en tablas

--- a/detalle.html
+++ b/detalle.html
@@ -62,7 +62,7 @@
             </table>
         </div>
         <div class="col-3">
-            <h6>Tiempo en Linea (%)</h6>
+            <h6>Tiempo Desconectado en:</h6>
         </div>
     </div>
     <div class="row">
@@ -84,14 +84,23 @@
             </table>
         </div>
         <div class="col-3">
+            <h6>Horas</h6>
+            <label class="form-control" id="hrs">Desconexion</label>
+            <h6>Minutos</h6>
+            <label class="form-control" id="min">Desconexion</label>
+            <h6>Segundos</h6>
+            <label class="form-control" id="seg">Desconexion</label>
+            <div class="efectividad">
+            <h6>Tiempo en Linea (%)</h6>
+            </div>
             <canvas id="oilChart" width="600" height="400"></canvas>
            <div class="efectividad">
-            <h6>Efectividad Antena</h6>
+            <h6>Efectividad de Transmision</h6>
            </div>
            <div class="logoEfectividad">
-            <i class="fas fa-check-circle ok gris fa-3x" id="ok"></i>
-            <i class="fas fa-exclamation-circle gris advertencia fa-3x" id="advertencia"></i>
-            <i class="fas fa-times-circle error gris fa-3x" id="error"></i>
+            <i class="fas fa-check-circle ok  fa-3x" id="ok"></i>
+            <i class="fas fa-exclamation-circle  advertencia fa-3x" id="advertencia"></i>
+            <i class="fas fa-times-circle error  fa-3x" id="error"></i>
            </div>
 
         </div>
