ajustes en tabla detalles

--- a/detalle.html
+++ b/detalle.html
@@ -30,11 +30,11 @@
             </div>
             <div class="col-3">
                 <h6>N&uacutemero de Desconexiones</h6>
-                <label class="form-control" id="numDesconexion">Desconexion</label>
+                <label class="form-control" id="numDesconexionDetalle">Desconexion</label>
             </div>
             <div class="col-3">
                 <h6>Tiempo Total Desconectado</h6>
-                <label class="form-control" id="totalDesconexion">Desconexion</label>
+                <label class="form-control" id="totalDesconexionDetalle">Desconexion</label>
             </div>
             <div class="col-3">
                 <h6>Hora de la Consulta</h6>
@@ -117,6 +117,7 @@
 
 
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+<!-- <script type="text/javascript" src="app.js"></script> -->
 <script type="text/javascript" src="app2.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
