--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </div>
             <div class="col-4">
                 <h6>Detalles</h6>
-                <a href="detalle.html" target="_blank"><button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button></a>
+                <!-- Agregar / para subir a hosting -->
+                <a href="/detalle.html" target="_blank"><button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button></a>
             </div>
         </div>
     </div>
