--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-4">
                 <h6>Detalles</h6>
                 <!-- Agregar / para subir a hosting -->
-                <a href="/detalle.html" target="_blank"><button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button></a>
+                <a href="/paraiso.html" target="_blank"><button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button></a>
             </div>
         </div>
     </div>
@@ -90,7 +90,9 @@
             </div>
             <div class="col-4">
                 <h6>Detalles</h6>
-                <button type="button" class="btn btn-warning" id="detalleTorre2">Acceder al Detalle de Desconexiones</button>
+            <a href="/comalcalco.html" target="_blank">
+                <button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button>
+            </a>
             </div>
         </div>
     </div>
