--- a/paraiso.html
+++ b/paraiso.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <title>Detalle Antenas</title>
+    <title>Antena Paraiso</title>
 </head>
 <body>
 
