--- a/paraiso.html
+++ b/paraiso.html
@@ -23,6 +23,9 @@
 
 <section>
     <div class="container">
+        <div class="titulo">
+            <h3>Antena Paraiso</h3>
+        </div>
         <div class="row">
             <div class="col-3">
                 <h6>Fecha</h6>
