grafico 3 en html monitoreo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-4">
                 <h6>Detalles</h6>
             <a href="/comalcalco.html" target="_blank">
-                <button type="button" class="btn btn-warning" id="detalleTorre1">Acceder al Detalle de Desconexiones</button>
+                <button type="button" class="btn btn-warning" id="detalleTorre2">Acceder al Detalle de Desconexiones</button>
             </a>
             </div>
         </div>
@@ -104,7 +104,50 @@
             <hr>
 </section>
 
-// Grafico 3
+ <!-- Grafico 3 -->
+
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <!-- datos -->
+                <h6>Estatus Antena</h6>
+                <label class="form-control" id="mostrarPing3">Estado</label>
+            </div>
+            <div class="col-4">
+                <h6>Hora Actual</h6>
+                <label class="form-control" id="datos3">Hora actual</label>
+            </div>
+            <div class="col-4">
+                <h6>N&uacutemero de Desconexiones Hoy</h6>
+                <label class="form-control" id="totalDesconexion3">Número de Desconexiones</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h6>&Uacuteltima desconexi&oacuten</h6>
+                <label class="form-control" id="ultDesconexion3">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>&Uacuteltima Reconexi&oacuten</h6>
+                <label class="form-control" id="reconexion3">Desconexion</label>
+            </div>
+            <div class="col-4">
+                <h6>Detalles</h6>
+                <a href="/nbravo.html" target="_blank">
+                    <button type="button" class="btn btn-warning" id="detalleTorre3">Acceder al Detalle de Desconexiones</button>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Grafico 2 -->
+    <div class="container">
+        <canvas id="myChart3" width="1400" height="300"></canvas>
+        <div>
+            <hr>
+</section>
 
 
 
