--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="col-4">
                 <h6>N&uacutemero de Desconexiones Hoy</h6>
-                <label class="form-control" id="totalDesconexion3">Número de Desconexiones</label>
+                <label class="form-control" id="totalDesconexion3">Numero de Desconexiones</label>
             </div>
         </div>
         <div class="row">
